# sec_gov_reports

./: README.md  pyproject.toml
development/: road.md
docs/: 10-Q_1.html  2_FilingSummary.xml  3_FilingSummary.xml  ABEO_1.xml  ABEO_2.xml  ABEO_3.xml  ABEO_5.xml  FilingSummary.xml  Financial_Report.xlsx  janx-20210630.xsd.xml
docs/ABEO/: Financial_Report (2).xlsx  Financial_Report (3).xlsx  Financial_Report (4).xlsx  Financial_Report(1).xlsx
docs/ABEO/2f988a40_40e9_4524_8420_d8a10518e019.xlsx/: Workbook.html
docs/ABEO/2f988a40_40e9_4524_8420_d8a10518e019.xlsx/Worksheets/: Sheet01.html  Sheet02.html  Sheet03.html  Sheet04.html  Sheet05.html  Sheet06.html  Sheet07.html  Sheet08.html  Sheet09.html  Sheet10.html  Sheet11.html  Sheet12.html  Sheet13.html  Sheet14.html  Sheet15.html  Sheet16.html  Sheet17.html  Sheet18.html  filelist.xml
docs/ABEO/68aa164a_228a_40c3_a677_8e5f9641068c.xlsx/: Workbook.html
docs/ABEO/68aa164a_228a_40c3_a677_8e5f9641068c.xlsx/Worksheets/: Sheet01.html  Sheet02.html  Sheet03.html  Sheet04.html  Sheet05.html  Sheet06.html  Sheet07.html  Sheet08.html  Sheet09.html  Sheet10.html  Sheet11.html  Sheet12.html  filelist.xml
get_reports/: __init__.py
get_reports/src/versions/: __init__.py  databases.py
get_reports/src/versions/by_r/: data.py  extract.py  launch.py
get_reports/src/versions/get_reports/: DECSRIPTION.md  Find_Company_Reports.ipynb  sample.xlsx  sql_pandas.ipynb  try_read_xls.ipynb
get_reports/src/versions/v2/: data_clean_1.py  (+1 more)
get_reports/utils/: data_bases.py  driver_gecko.py
settings/: config.py  db_config.json
(+5 files in other folders)
